--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -41,41 +41,41 @@ import java.util.ArrayList;
 import java.util.Scanner;
 
 public class MultiBackPack03 {
-  public static void main(String[] args) {
-    Scanner scanner = new Scanner(System.in);
-    int N = scanner.nextInt();
-    int V = scanner.nextInt();
-    ArrayList<Integer> v = new ArrayList<>();
-    ArrayList<Integer> w = new ArrayList<>();
-    for (int i = 0; i < N; i++) {
-      int vi = scanner.nextInt();
-      int wi = scanner.nextInt();
-      int t = scanner.nextInt();
-      for (int j = 0; j < t; j++) {
-        v.add(vi);
-        w.add(wi);
-      }
-    }
-    int[][] dp = new int[v.size() + 1][V+ 1];
-
-    // 对第0行进行初始化操作
-    for (int i = v.get(0); i <= V; ++i) {
-      dp[0][i] = w.get(0);
-    }
-
-    for (int i = 1; i < v.size(); ++i) {
-      for (int j = 0; j <= V; ++j) {
-        if (j >= v.get(i)) {
-          dp[i][j] = Math.max(dp[i - 1][j],
-              dp[i - 1][j - v.get(i)] + w.get(i));
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        int N = scanner.nextInt();
+        int V = scanner.nextInt();
+        ArrayList<Integer> v = new ArrayList<>();
+        ArrayList<Integer> w = new ArrayList<>();
+        for (int i = 0; i < N; i++) {
+            int vi = scanner.nextInt();
+            int wi = scanner.nextInt();
+            int t = scanner.nextInt();
+            for (int j = 0; j < t; j++) {
+                v.add(vi);
+                w.add(wi);
+            }
         }
-        else {
-          dp[i][j] = dp[i - 1][j];
+        int[][] dp = new int[v.size() + 1][V+ 1];
+
+        // 对第0行进行初始化操作
+        for (int i = v.get(0); i <= V; ++i) {
+            dp[0][i] = w.get(0);
         }
-      }
+
+        for (int i = 1; i < v.size(); ++i) {
+            for (int j = 0; j <= V; ++j) {
+                if (j >= v.get(i)) {
+                    dp[i][j] = Math.max(dp[i - 1][j],
+                                        dp[i - 1][j - v.get(i)] + w.get(i));
+                }
+                else {
+                    dp[i][j] = dp[i - 1][j];
+                }
+            }
+        }
+        System.out.println(dp[v.size() - 1][V]);
     }
-    System.out.println(dp[v.size() - 1][V]);
-  }
 }
 ```
 
@@ -87,32 +87,80 @@ import java.util.ArrayList;
 import java.util.Scanner;
 
 public class MultiBackPack01 {
-  public static void main(String[] args) {
-    Scanner scanner = new Scanner(System.in);
-    int N = scanner.nextInt();
-    int V = scanner.nextInt();
-    ArrayList<Integer> v = new ArrayList<>();
-    ArrayList<Integer> w = new ArrayList<>();
-    for (int i = 0; i < N; i++) {
-      int vi = scanner.nextInt();
-      int wi = scanner.nextInt();
-      int t = scanner.nextInt();
-      for (int j = 0; j < t; j++) {
-        v.add(vi);
-        w.add(wi);
-      }
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        int N = scanner.nextInt();
+        int V = scanner.nextInt();
+        ArrayList<Integer> v = new ArrayList<>();
+        ArrayList<Integer> w = new ArrayList<>();
+        for (int i = 0; i < N; i++) {
+            int vi = scanner.nextInt();
+            int wi = scanner.nextInt();
+            int t = scanner.nextInt();
+            for (int j = 0; j < t; j++) {
+                v.add(vi);
+                w.add(wi);
+            }
+        }
+        int[] f = new int[V + 1];
+        for (int i = 0; i < v.size(); i++) {
+            for (int j = V; j >= v.get(i); j--) {
+                f[j] = Math.max(f[j], f[j - v.get(i)] + w.get(i));
+            }
+        }
+        System.out.println(f[V]);
     }
-    int[] f = new int[V + 1];
-    for (int i = 0; i < v.size(); i++) {
-      for (int j = V; j >= v.get(i); j--) {
-        f[j] = Math.max(f[j], f[j - v.get(i)] + w.get(i));
-      }
-    }
-    System.out.println(f[V]);
-  }
 }
 
 ```
 
 ## 多重背包动态转移方程
+
+在背包容量足够的情况下，01背包的动态转移方程为：
+$$
+dp[i][j] =
+max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]
+$$
+上述的动态转移方程是基于每个物品选和不选，那么对于多重背包来说，如果物品可以选择$S$次，我们可以选择0次，可以选择1次，......，可以选择$S$次，我们就需要从这些情况当中选择收益最大的那次（前提是背包能够容纳下相应次数的物品），因此多重背包的动态转移方程如下（$$ T = min(S, \frac{V}{v_i})\\$$，其中$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示当前背包的容量）：
+$$
+dp[i][j] = 
+max\\
+\{ \\
+dp[i - 1][j], \\
+dp[i - 1][j - v[i]] + w[i]),\\
+dp[i - 1][j - v[i] * 2] + w[i] * 2, \\
+..., \\
+dp[i - 1][j - v[i] * T] + w[i] * T)), \\
+\}
+$$
+基于上面的动态转移方程我们可以得到下面的代码：
+
+```java
+import java.util.Scanner;
+
+public class MultiBackPack02 {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        int N = scanner.nextInt();
+        int V = scanner.nextInt();
+        int[] w = new int[N];
+        int[] v = new int[N];
+        int[] t = new int[N];
+        int[] f = new int[V + 1];
+        for (int i = 0; i < N; i++) {
+            v[i] = scanner.nextInt();
+            w[i] = scanner.nextInt();
+            t[i] = scanner.nextInt();
+        }
+        for (int i = 0; i < N; i++) {
+            for (int j = V; j >= v[i]; --j) {
+                for (int k = 1; k <= t[i] && j >= v[i] * k; k++) {
+                    f[j] = Math.max(f[j], f[j - v[i] * k] + w[i] * k);
+                }
+            }
+        }
+        System.out.println(f[V]);
+    }
+}
+```
 
