--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -40,7 +40,7 @@ $$
 import java.util.ArrayList;
 import java.util.Scanner;
 
-public class MultiBackPack03 {
+public class Main {
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
         int N = scanner.nextInt();
@@ -86,7 +86,7 @@ public class MultiBackPack03 {
 import java.util.ArrayList;
 import java.util.Scanner;
 
-public class MultiBackPack01 {
+public class Main {
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
         int N = scanner.nextInt();
@@ -138,7 +138,7 @@ $$
 ```java
 import java.util.Scanner;
 
-public class MultiBackPack02 {
+public class Main {
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
         int N = scanner.nextInt();
