--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -121,7 +121,7 @@ $$
 dp[i][j] =
 max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]
 $$
-上述的动态转移方程是基于每个物品选和不选，那么对于多重背包来说，如果物品可以选择$S$次，我们可以选择0次，可以选择1次，......，可以选择$S$次，我们就需要从这些情况当中选择收益最大的那次（前提是背包能够容纳下相应次数的物品），因此多重背包的动态转移方程如下（$$ T = min(S, \frac{V}{v_i})\\$$，其中$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示当前背包的容量）：
+上述的动态转移方程是基于每个物品选和不选，那么对于多重背包来说，如果物品可以选择$S$次，我们可以选择0次，可以选择1次，......，可以选择$S$次，我们就需要从这些情况当中选择收益最大的那次（前提是背包能够容纳下相应次数的物品），因此多重背包的动态转移方程如下（ $T = min(S, \frac{V}{v_i})$，其中$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示当前背包的容量）：
 $$
 dp[i][j] = 
 max\\
