--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -154,6 +154,10 @@ public class Main {
         }
         for (int i = 0; i < N; i++) {
             for (int j = V; j >= v[i]; --j) {
+                // 这个循环就表示多重背包的动态转移公式了
+                // 在这段代码当中虽然 Math.max的参数只有量
+                // 但是有一段循环，将这个循环展开，他表示的
+                // 就是多重背包的动态转移方程
                 for (int k = 1; k <= t[i] && j >= v[i] * k; k++) {
                     f[j] = Math.max(f[j], f[j - v[i] * k] + w[i] * k);
                 }
@@ -163,4 +167,18 @@ public class Main {
     }
 }
 ```
+
+## 总结
+
+在本篇文章当中主要跟大家介绍了**多重背包**的两种解决办法，一种是将**多重背包**转化成**01背包**，另外一种方法是根据**多重背包**的动态转移方程去解决问题，可以看出后者的空间复杂度更低，更节约内存空间。下期我们用另外一种方法去优化**多重背包**。
+
+以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！
+
+---
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：一无是处的研究僧，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
 
