--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -32,7 +32,7 @@ $$
 
 ## 将多重背包转化成01背包
 
-在**多重背包**的问题当中，我们对于一种物品我们可以使用多次，比说$A$物品我们可以用三次。事实上我们可以将多重背包转化成01背包，比如我们可以将三个$A$物品变成三个不同的物品，所谓不同就是他们的名字不一样，但是他们的价值和体积都是一样的，假设$A$的体积为$V_a$，价值为$W_a$，能够使用的次数为3次，那么我们可以将其转化成$A_1$，$A_2$，$A_3$，这三个物品的体积和价值均为$V_a$和$W_a$，这样的话$A$可以使用3次就转化成了$A_1$、$A_2$和$A_3均只能使用一次。通过这种转换我们就将**多重背包**转化成了**01背包**。
+在**多重背包**的问题当中，我们对于一种物品我们可以使用多次，比说$A$物品我们可以用三次。事实上我们可以将多重背包转化成01背包，比如我们可以将三个$A$物品变成三个不同的物品，所谓不同就是他们的名字不一样，但是他们的价值和体积都是一样的，假设$A$的体积为$V_a$，价值为$W_a$，能够使用的次数为3次，那么我们可以将其转化成$A_1$，$A_2$，$A_3$，这三个物品的体积和价值均为$V_a$和$W_a$，这样的话$A$可以使用3次就转化成了$A_1$、$A_2$和$A_3$均只能使用一次。通过这种转换我们就将**多重背包**转化成了**01背包**。
 
 **多重背包**`Java`代码：
 
@@ -127,10 +127,10 @@ dp[i][j] =
 max\\
 \{ \\
 dp[i - 1][j], \\
-dp[i - 1][j - v[i]] + w[i]),\\
+dp[i - 1][j - v[i]] + w[i],\\
 dp[i - 1][j - v[i] * 2] + w[i] * 2, \\
 ..., \\
-dp[i - 1][j - v[i] * T] + w[i] * T)), \\
+dp[i - 1][j - v[i] * T] + w[i] * T\\
 \}
 $$
 基于上面的动态转移方程我们可以得到下面的代码：
@@ -181,4 +181,3 @@ public class Main {
 关注公众号：一无是处的研究僧，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
 
 ![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
-
