--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -1,4 +1,4 @@
-# 深入剖析多重背包问题（上篇）
+# 深入剖析多重背包问题（下篇）
 
 ## 前言
 
@@ -114,63 +114,9 @@ public class Main {
 
 ```
 
-## 多重背包动态转移方程
-
-在背包容量足够的情况下，01背包的动态转移方程为：
-$$
-dp[i][j] =
-max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]
-$$
-上述的动态转移方程是基于每个物品选和不选，那么对于多重背包来说，如果物品可以选择$S$次，我们可以选择0次，可以选择1次，......，可以选择$S$次，我们就需要从这些情况当中选择收益最大的那次（前提是背包能够容纳下相应次数的物品），因此多重背包的动态转移方程如下（ $T = min(S, \frac{V}{v_i})$，其中$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示当前背包的容量）：
-$$
-dp[i][j] = 
-max\\
-\{ \\
-dp[i - 1][j], \\
-dp[i - 1][j - v[i]] + w[i],\\
-dp[i - 1][j - v[i] * 2] + w[i] * 2, \\
-..., \\
-dp[i - 1][j - v[i] * T] + w[i] * T\\
-\}
-$$
-基于上面的动态转移方程我们可以得到下面的代码：
-
-```java
-import java.util.Scanner;
-
-public class Main {
-    public static void main(String[] args) {
-        Scanner scanner = new Scanner(System.in);
-        int N = scanner.nextInt();
-        int V = scanner.nextInt();
-        int[] w = new int[N];
-        int[] v = new int[N];
-        int[] t = new int[N];
-        int[] f = new int[V + 1];
-        for (int i = 0; i < N; i++) {
-            v[i] = scanner.nextInt();
-            w[i] = scanner.nextInt();
-            t[i] = scanner.nextInt();
-        }
-        for (int i = 0; i < N; i++) {
-            for (int j = V; j >= v[i]; --j) {
-                // 这个循环就表示多重背包的动态转移公式了
-                // 在这段代码当中虽然 Math.max的参数只有量
-                // 但是有一段循环，将这个循环展开，他表示的
-                // 就是多重背包的动态转移方程
-                for (int k = 1; k <= t[i] && j >= v[i] * k; k++) {
-                    f[j] = Math.max(f[j], f[j - v[i] * k] + w[i] * k);
-                }
-            }
-        }
-        System.out.println(f[V]);
-    }
-}
-```
-
 ## 总结
 
-在本篇文章当中主要跟大家介绍了**多重背包**的两种解决办法，一种是将**多重背包**转化成**01背包**，另外一种方法是根据**多重背包**的动态转移方程去解决问题，可以看出后者的空间复杂度更低，更节约内存空间。下期我们用另外一种方法去优化**多重背包**。
+在本篇文章当中主要跟大家介绍了**多重背包**的两种解决办法，一种是将**多重背包**转化成**01背包**，另外一种方法是根据**多重背包**的动态转移方程去解决问题，可以看出后者的空间复杂度更低，更节约内存空间。
 
 以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！
 
