--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在前面的两篇文章当中，我们已经仔细的讨论了[01背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)和[完全背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)，在本篇文章当中将给大家介绍另外一种背包问题——**多重背包问题**，多重背包问题的物品数量介于**01背包问题**和**完全背包问题**之间，他的物品的数量是有限个！
+在前面的三篇文章当中，我们已经仔细的讨论了[01背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)和[完全背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)以及[多重背包上篇](https://juejin.cn/post/7120663634354634788)，在本篇文章当中主要给大家介绍**多重背包问题**的一种优化方法——二进制优化**多重背包**，如果你已经看过**多重背包上篇**，你可以直接跳到**二进制优化**小节。
 
 ## 多重背包问题介绍
 
@@ -14,9 +14,7 @@
 
 ## 背包问题复习——01背包的动态转移方程
 
-### 01背包的动态转移方程
-
-01背包问题当中，我们是使用一个二维数组`dp[i][j]`进行计算，`dp[i][j]`表示在只使用前`i`个物品且背包容量为`j`的情况下，我们能够获得的最大的收益。在这个情况下，我们根据当前背包容量`j`判断是否能装入第`i`个物品可以得到下面两个方程：
+在01背包问题当中，我们是使用一个二维数组`dp[i][j]`进行计算，`dp[i][j]`表示在只使用前`i`个物品且背包容量为`j`的情况下，我们能够获得的最大的收益。在这个情况下，我们根据当前背包容量`j`判断是否能装入第`i`个物品可以得到下面两个方程：
 $$
 dp[i][j] = \begin{cases}
 max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]\\
@@ -79,7 +77,7 @@ public class Main {
 }
 ```
 
-和01背包一样，我们对**多重背包**也可以使用单行数组进行优化：
+和01背包一样（如果这个地方不是很理解可以看[01背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)我们在这篇文章当中做出了详细的解释），我们对**多重背包**也可以使用单行数组进行优化：
 
 ```java
 
@@ -113,6 +111,10 @@ public class Main {
 }
 
 ```
+
+## 多重背包的二进制优化
+
+
 
 ## 总结
 
