--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在前面的三篇文章当中，我们已经仔细的讨论了[01背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)和[完全背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)以及[多重背包上篇](https://juejin.cn/post/7120663634354634788)，在本篇文章当中主要给大家介绍**多重背包问题**的一种优化方法——二进制优化**多重背包**，如果你已经看过**多重背包上篇**，你可以直接跳到**二进制优化**小节。
+在前面的三篇文章当中，我们已经仔细的讨论了[01背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)和[完全背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)以及[多重背包上篇](https://juejin.cn/post/7120663634354634788)，在本篇文章当中主要给大家介绍**多重背包问题**的一种优化方法——二进制优化**多重背包**，如果你还没有看过**多重背包上篇**，你需要先阅读**多重背包上篇**。
 
 ## 多重背包问题介绍
 
@@ -12,107 +12,9 @@
 
 多重背包问题跟**01背包**和**完全背包**的区别都是在物品的可用次数上，**01背包**只能使用一次，**多重背包**可用使用无数次，而**多重背包**可用使用多次。
 
-## 背包问题复习——01背包的动态转移方程
-
-在01背包问题当中，我们是使用一个二维数组`dp[i][j]`进行计算，`dp[i][j]`表示在只使用前`i`个物品且背包容量为`j`的情况下，我们能够获得的最大的收益。在这个情况下，我们根据当前背包容量`j`判断是否能装入第`i`个物品可以得到下面两个方程：
-$$
-dp[i][j] = \begin{cases}
-max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]\\
-dp[i - 1][j] , j \lt v[i]
-\end{cases}
-$$
-上面01背包的公式的第二条比较简单，如果背包容量不足以容纳第`i`件物品，那么只能从前`i - 1`物品当中选择了。我们来仔细分析一下第一条公式。
-
-如果当前背包容量可以容纳第`i`个物品，那么我们就可以选择第`i`件物品或者不选择，我们应该选择两种选择当中收益更大的那个。
-
-- 如果我们不选择第`i`个物品，那么我们就能够使用容量为`j`的背包去选择前`i - 1`个物品，这种情况下我们的最大收益为`dp[i - 1][j]`。
-- 如果选择第`i`个物品，那么我们背包容量还剩下`j - v[i]`，还可以选择剩下的`i - 1`个物品，而且我们的收益需要加上`w[i]`，因此我们的收益为`max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])`。
-
-## 将多重背包转化成01背包
-
-在**多重背包**的问题当中，我们对于一种物品我们可以使用多次，比说$A$物品我们可以用三次。事实上我们可以将多重背包转化成01背包，比如我们可以将三个$A$物品变成三个不同的物品，所谓不同就是他们的名字不一样，但是他们的价值和体积都是一样的，假设$A$的体积为$V_a$，价值为$W_a$，能够使用的次数为3次，那么我们可以将其转化成$A_1$，$A_2$，$A_3$，这三个物品的体积和价值均为$V_a$和$W_a$，这样的话$A$可以使用3次就转化成了$A_1$、$A_2$和$A_3$均只能使用一次。通过这种转换我们就将**多重背包**转化成了**01背包**。
-
-**多重背包**`Java`代码：
-
-```java
-import java.util.ArrayList;
-import java.util.Scanner;
-
-public class Main {
-    public static void main(String[] args) {
-        Scanner scanner = new Scanner(System.in);
-        int N = scanner.nextInt();
-        int V = scanner.nextInt();
-        ArrayList<Integer> v = new ArrayList<>();
-        ArrayList<Integer> w = new ArrayList<>();
-        for (int i = 0; i < N; i++) {
-            int vi = scanner.nextInt();
-            int wi = scanner.nextInt();
-            int t = scanner.nextInt();
-            for (int j = 0; j < t; j++) {
-                v.add(vi);
-                w.add(wi);
-            }
-        }
-        int[][] dp = new int[v.size() + 1][V+ 1];
-
-        // 对第0行进行初始化操作
-        for (int i = v.get(0); i <= V; ++i) {
-            dp[0][i] = w.get(0);
-        }
-
-        for (int i = 1; i < v.size(); ++i) {
-            for (int j = 0; j <= V; ++j) {
-                if (j >= v.get(i)) {
-                    dp[i][j] = Math.max(dp[i - 1][j],
-                                        dp[i - 1][j - v.get(i)] + w.get(i));
-                }
-                else {
-                    dp[i][j] = dp[i - 1][j];
-                }
-            }
-        }
-        System.out.println(dp[v.size() - 1][V]);
-    }
-}
-```
-
-和01背包一样（如果这个地方不是很理解可以看[01背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)我们在这篇文章当中做出了详细的解释），我们对**多重背包**也可以使用单行数组进行优化：
-
-```java
-
-import java.util.ArrayList;
-import java.util.Scanner;
-
-public class Main {
-    public static void main(String[] args) {
-        Scanner scanner = new Scanner(System.in);
-        int N = scanner.nextInt();
-        int V = scanner.nextInt();
-        ArrayList<Integer> v = new ArrayList<>();
-        ArrayList<Integer> w = new ArrayList<>();
-        for (int i = 0; i < N; i++) {
-            int vi = scanner.nextInt();
-            int wi = scanner.nextInt();
-            int t = scanner.nextInt();
-            for (int j = 0; j < t; j++) {
-                v.add(vi);
-                w.add(wi);
-            }
-        }
-        int[] f = new int[V + 1];
-        for (int i = 0; i < v.size(); i++) {
-            for (int j = V; j >= v.get(i); j--) {
-                f[j] = Math.max(f[j], f[j - v.get(i)] + w.get(i));
-            }
-        }
-        System.out.println(f[V]);
-    }
-}
-
-```
-
 ## 多重背包的二进制优化
+
+在正式分析**多重背包的二进制优化**之前，我们先分析一下**多重背包的时间复杂度**，假设我们有$N$件物品，平均每个物品的个数为$S$，那么多重背包的的时间复杂度为$O(NSV)$。而多重背包的二进制优化可以将这个时间复杂度降低到$O(NV)$。
 
 
 
