update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -16,13 +16,29 @@
 
 在正式分析**多重背包的二进制优化**之前，我们先分析一下**多重背包的时间复杂度**，假设我们有$N$件物品，平均每个物品的个数为$S$，那么多重背包的的时间复杂度为$O(NSV)$。而多重背包的二进制优化可以将这个时间复杂度降低到$O(NV)$。
 
+在[多重背包上篇](https://juejin.cn/post/7120663634354634788)上篇当中我们提到了多重背包的动态转移方程（ $T = min(S, \frac{V}{v_i})$，其中$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示当前背包的容量）：
+$$
+dp[i][j] = 
+max\\
+\{ \\
+dp[i - 1][j], \\
+dp[i - 1][j - v[i]] + w[i],\\
+dp[i - 1][j - v[i] * 2] + w[i] * 2, \\
+..., \\
+dp[i - 1][j - v[i] * T] + w[i] * T\\
+\}
+$$
+从上面的公式我们可以知道，对于某个有$S$件的物品当中，我们要选择一个合适的数字使得我们的收益最大，这个数字可能是$1, 2, 3, 4, ..., S$。我们在文章[多重背包上篇](https://juejin.cn/post/7120663634354634788)提到我们可以将**多重背包**转化成**01背包**，我们将$S$个物品在逻辑上分成体积和价值相同的$S$个不同的物品，被分成$S$个不同的物品在进行动态选择的时候与$S$个相同的物品是一样的。比如说对于$S$个相同的物品$A$，我们在选择3个的时候收益可以达到最大，那么对于转化之后的**01背包问题**来说就选择3个与$A$体积和价值相同的物品即可。
+
+根据上面分析我们可以知道**多重背包**能够转化成**01背包**的原因就是多重背包在转化为**01背包**之后，**01背包**能够有**多重背包**选1个，选2个，选3个，...，选$S$个的效果。
+
 
 
 ## 总结
 
 在本篇文章当中主要跟大家介绍了**多重背包**的两种解决办法，一种是将**多重背包**转化成**01背包**，另外一种方法是根据**多重背包**的动态转移方程去解决问题，可以看出后者的空间复杂度更低，更节约内存空间。
 
-以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！
+以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！（记得点赞收藏哦！）
 
 ---
 
