update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -32,11 +32,35 @@ $$
 
 根据上面分析我们可以知道**多重背包**能够转化成**01背包**的原因就是多重背包在转化为**01背包**之后，**01背包**能够有**多重背包**选1个，选2个，选3个，...，选$S$个的效果。
 
+而我们的二进制优化也主要集中在这个地方。**多重背包**的二进制优化也是将多重背包问题转化成**01背包**问题，但是不是将$S$个相同的物品转化成$S$个体积和价值相同的不同的物品。根据上文的分析我们知道，我们在将**多重背包**转化成**01背包**之后是需要保证**01背包**能够实现**多重背包**选1个，选2个，选3个，...，选$S$个的效果。那么我们如何实现这一点呢？下面代码主要显示二进制优化将**多重背包**转化成**01背包**该往装物品的价值和体积的集合里加入什么东西。
+
+```java
+Scanner scanner = new Scanner(System.in);
+int N = scanner.nextInt();
+int V = scanner.nextInt();
+ArrayList<Integer> v = new ArrayList<>();
+ArrayList<Integer> w = new ArrayList<>();
+for (int i = 0; i < N; i++) {
+    int vi = scanner.nextInt();
+    int wi = scanner.nextInt();
+    int si = scanner.nextInt();
+    for (int j = 1; j <= si; j *= 2) {
+        si -= j ;
+        v.add(vi * j);
+        w.add(wi * j);
+    }
+    if (si > 0) {
+        v.add(vi * si);
+        w.add(wi * si);
+    }
+}
+```
+
 
 
 ## 总结
 
-在本篇文章当中主要跟大家介绍了**多重背包**的两种解决办法，一种是将**多重背包**转化成**01背包**，另外一种方法是根据**多重背包**的动态转移方程去解决问题，可以看出后者的空间复杂度更低，更节约内存空间。
+本篇文章主要给大家介绍的**多重背包问题**的二进制优化
 
 以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！（记得点赞收藏哦！）
 
