update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -41,9 +41,14 @@ int V = scanner.nextInt();
 ArrayList<Integer> v = new ArrayList<>();
 ArrayList<Integer> w = new ArrayList<>();
 for (int i = 0; i < N; i++) {
+    // 这个表示第 i 个物品的体积
     int vi = scanner.nextInt();
+    // 这个表示第 i 个物品的价值
     int wi = scanner.nextInt();
+    // 这个表示第 i 个物品有多少个
     int si = scanner.nextInt();
+    // 这段代码主要是实现多重背包能够选择1个
+    // 选择2个，...，选择S个的效果
     for (int j = 1; j <= si; j *= 2) {
         si -= j ;
         v.add(vi * j);
@@ -56,7 +61,16 @@ for (int i = 0; i < N; i++) {
 }
 ```
 
+我们举一个例子来分析上面的代码，假设我们加入一个物品$A$，它的个数为9，价值和体积分别为5和3。那么在集合$v$和集合$w$当中的数据分别为：
+$$
+v = [3, 6, 12, 6]
+$$
 
+$$
+w  = [5, 10, 20, 10]
+$$
+
+上面的例子将9个$A$分成了1个$A_1$，2个$A_2$，4个$A_3$，以及2个$A_4$，$A_1$到$A_4$的体积和价值都相等。
 
 ## 总结
 
