update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -70,7 +70,7 @@ $$
 w  = [5, 10, 20, 10]
 $$
 
-上面的例子将9个$A$分成了1个$A_1$，2个$A_2$，4个$A_3$，以及2个$A_4$，$A_1$到$A_4$的体积和价值都相等。
+上面的例子将9个$A$分成了$A_1$，$A_2$，$A_3$，以及$A_4$，$A_1$到$A_4$的体积和价值分别相当于1个，2个，4个，2个的$A$的体积和价值。
 
 ## 总结
 
