update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -70,7 +70,17 @@ $$
 w  = [5, 10, 20, 10]
 $$
 
-上面的例子将9个$A$分成了$A_1$，$A_2$，$A_3$，以及$A_4$，$A_1$到$A_4$的体积和价值分别相当于1个，2个，4个，2个的$A$的体积和价值。
+上面的例子将9个$A$分成了$A_1$，$A_2$，$A_3$，以及$A_4$，$A_1$到$A_4$的体积和价值分别相当于1个，2个，4个，2个的$A$的体积和价值。我们在上文当中提到了，我们在将**多重背包**转化成**01背包**之后是需要保证**01背包**能够实现**多重背包**选1个，选2个，选3个，...，选$S$个的效果，那么上面的转化是如何实现这个效果的呢？
+
+- 一个$A$：相当于$A_1$。
+- 两个$A$：相当于$A_2$。
+- 三个$A$：相当于$A_1 + A_2$，也就是在动态选择的时候选择了$A_1$和$A_2$两个物品。
+- 四个$A$：相当于$A_3$。
+- 五个$A$：相当于$A_1 + A_3$，也就是在动态选择的时候选择了$A_1$和$A_3$两个物品。
+- 六个$A$：相当于$A_2 + A_3$，也就是在动态选择的时候选择了$A_2$和$A_3$两个物品。
+- 七个$A$：相当于$A_1 + A_2 + A_3$，也就是在动态选择的时候选择了$A_1$、$A_2$和$A_3$三个物品。
+- 八个$A$：相当于$A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_2$、$A_3$和$A_4$三个物品。
+- 九个$A$：相当于$A_1 + A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_1$、$A_2$、$A_3$和$A_4$三个物品。
 
 ## 总结
 
