update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -14,6 +14,8 @@
 
 ## 多重背包的二进制优化
 
+### 二进制优化的实现
+
 在正式分析**多重背包的二进制优化**之前，我们先分析一下**多重背包的时间复杂度**，假设我们有$N$件物品，平均每个物品的个数为$S$，那么多重背包的的时间复杂度为$O(NSV)$。而多重背包的二进制优化可以将这个时间复杂度降低到$O(NV)$。
 
 在[多重背包上篇](https://juejin.cn/post/7120663634354634788)上篇当中我们提到了多重背包的动态转移方程（ $T = min(S, \frac{V}{v_i})$，其中$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示当前背包的容量）：
@@ -80,7 +82,11 @@ $$
 - 六个$A$：相当于$A_2 + A_3$，也就是在动态选择的时候选择了$A_2$和$A_3$两个物品。
 - 七个$A$：相当于$A_1 + A_2 + A_3$，也就是在动态选择的时候选择了$A_1$、$A_2$和$A_3$三个物品。
 - 八个$A$：相当于$A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_2$、$A_3$和$A_4$三个物品。
-- 九个$A$：相当于$A_1 + A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_1$、$A_2$、$A_3$和$A_4$三个物品。
+- 九个$A$：相当于$A_1 + A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_1$、$A_2$、$A_3$和$A_4$四个物品。
+
+### 二进制优化的本质
+
+
 
 ## 总结
 
