--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -84,7 +84,9 @@ $$
 - 八个$A$：相当于$A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_2$、$A_3$和$A_4$三个物品。
 - 九个$A$：相当于$A_1 + A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_1$、$A_2$、$A_3$和$A_4$四个物品。
 
-相信经过上面的例子之后你已经大致明白了二进制优化的大致实现过程，二进制优化也是将**多重背包**转化成**01背包**但是和之前的转化不同的是，我们不是将$S$个物品$A$划分成$S$个体积和价值相同的物品，而是将其划分成体积和价值是原来的物品1倍、2倍、3倍，....，$2^n$倍的物品。
+相信经过上面的例子之后你已经大致明白了二进制优化的大致实现过程，二进制优化也是将**多重背包**转化成**01背包**但是和之前的转化不同的是，我们不是将$S$个物品$A$划分成$S$个体积和价值相同的物品，而是将其划分成体积和价值是原来的物品1倍、2倍、3倍，....，$2^n$倍的物品，即$1 + 2 + 4 + ... + 2^n + a = S$，其中$a$是最后的剩下的余数（$a < 2^{n + 1}$）。
+
+
 
 ### 二进制优化的本质
 
