update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -84,7 +84,11 @@ $$
 - 八个$A$：相当于$A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_2$、$A_3$和$A_4$三个物品。
 - 九个$A$：相当于$A_1 + A_2 + A_3 + A_4$，也就是在动态选择的时候选择了$A_1$、$A_2$、$A_3$和$A_4$四个物品。
 
-相信经过上面的例子之后你已经大致明白了二进制优化的大致实现过程，二进制优化也是将**多重背包**转化成**01背包**但是和之前的转化不同的是，我们不是将$S$个物品$A$划分成$S$个体积和价值相同的物品，而是将其划分成体积和价值是原来的物品1倍、2倍、3倍，....，$2^n$倍的物品，即$1 + 2 + 4 + ... + 2^n + a = S$，其中$a$是最后的剩下的余数（$a \lt 2^{n + 1}$）。这样的划分我们可以知道，我们划分之后的物品的数目会少非常多。如果物品的次数的最大值是`int`类型的最大值，如果我们一个一个的划分最多可以划分超过20亿个物品，而上面的划分方式，我们划分出来的物品不会超过32个。
+相信经过上面的例子之后你已经大致明白了二进制优化的大致实现过程，二进制优化也是将**多重背包**转化成**01背包**但是和之前的转化不同的是，我们不是将$S$个物品$A$划分成$S$个体积和价值相同的物品，而是将其划分成体积和价值是原来的物品1倍、2倍、3倍，....，$2^n$倍的物品，即$1 + 2 + 4 + ... + 2^n + a = S$，其中$a$是最后的剩下的余数（$a \lt 2^{n + 1}$）。这样的划分我们可以知道，我们划分之后的物品的数目会少非常多。如果物品的次数的最大值是`int`类型的最大值，如果我们一个一个的划分最多可以划分超过20亿个物品，而上面的划分方式，我们划分出来的物品不会超过32个，因此大大降低了时间复杂度。
+
+之前一个一个的划分我们的时间复杂度为$O(NSV)$，而像上面那样划分我们最大的时间复杂度为$O(32NV) = O(NV)$，其中$N$表示物品的个数，$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示背包的容量。
+
+
 
 ### 二进制优化的本质
 
