update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -88,7 +88,46 @@ $$
 
 之前一个一个的划分我们的时间复杂度为$O(NSV)$，而像上面那样划分我们最大的时间复杂度为$O(32NV) = O(NV)$，其中$N$表示物品的个数，$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示背包的容量。
 
+上面就是我们使用二进制优化方式将**多重背包**转化成**01背包**的方式，完整代码如下（下方代码使用了单行数组优化）：
 
+```java
+import java.util.ArrayList;
+import java.util.Scanner;
+
+public class Main {
+  public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int N = scanner.nextInt();
+    int V = scanner.nextInt();
+    ArrayList<Integer> v = new ArrayList<>();
+    ArrayList<Integer> w = new ArrayList<>();
+    for (int i = 0; i < N; i++) {
+      int vi = scanner.nextInt();
+      int wi = scanner.nextInt();
+      int si = scanner.nextInt();
+      for (int j = 1; j <= si; j *= 2) {
+        si -= j ;
+        v.add(vi * j);
+        w.add(wi * j);
+      }
+      if (si > 0) {
+        v.add(vi * si);
+        w.add(wi * si);
+      }
+      System.out.println(v);
+      System.out.println(w);
+    }
+    int[] f = new int[V + 1];
+    for (int i = 0; i < v.size(); i++) {
+      for (int j = V; j >= v.get(i); j--) {
+        f[j] = Math.max(f[j], f[j - v.get(i)] + w.get(i));
+      }
+    }
+    System.out.println(f[V]);
+  }
+}
+
+```
 
 ### 二进制优化的本质
 
