--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -135,7 +135,7 @@ public class Main {
 
 ## 总结
 
-本篇文章主要给大家介绍的**多重背包问题**的二进制优化
+本篇文章主要给大家介绍的**多重背包问题**的二进制优化，里面的逻辑还是稍微有点复杂的，大家在看文字的时候可以参考代码仔细分析，可以理解的更好一点。
 
 以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！（记得点赞收藏哦！）
 
