update multi backpack

--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -86,7 +86,7 @@ $$
 
 相信经过上面的例子之后你已经大致明白了二进制优化的大致实现过程，二进制优化也是将**多重背包**转化成**01背包**但是和之前的转化不同的是，我们不是将$S$个物品$A$划分成$S$个体积和价值相同的物品，而是将其划分成体积和价值是原来的物品1倍、2倍、3倍，....，$2^n$倍的物品，即$1 + 2 + 4 + ... + 2^n + a = S$，其中$a$是最后的剩下的余数（$a \lt 2^{n + 1}$），比如上面最后一个2就是`a = 9 - 1 - 2 - 4`。这样的划分我们可以知道，我们划分之后的物品的数目会少非常多。如果物品的次数的最大值是`int`类型的最大值，如果我们一个一个的划分最多可以划分超过20亿个物品，而上面的划分方式，我们划分出来的物品不会超过32个，因此大大降低了时间复杂度。
 
-之前一个一个的划分我们的时间复杂度为$O(NSV)$，而像上面那样划分我们最大的时间复杂度为$O(32NV) = O(NV)$，其中$N$表示物品的个数，$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示背包的容量。
+之前一个一个的划分我们的时间复杂度为$O(NSV)$，而像上面那样划分我们最大的时间复杂度为$O(32NV) = O(NV)$，其中$N$表示物品的个数，$S$表示物品能够选择的次数，$V$表示背包的容量。
 
 上面就是我们使用二进制优化方式将**多重背包**转化成**01背包**的方式，完整代码如下（下方代码使用了单行数组优化）：
 
@@ -131,13 +131,19 @@ public class Main {
 
 ### 二进制优化的本质
 
+我们知道任何一个数都有他的二进制形式，任何一个数都可以由2的整数次幂相加得到：
 
+<img src="../images/hashmap/01-hashmap40.png" alt="01-hashmap40" style="zoom:80%;" />
+
+假如我们有15个物品$A$，那么我们会得到$A_1$，$A_2$，$A_3$，$A_4$，他们的价值和体积分别是$A$的1倍，2倍，4倍和8倍，这四个物品可以组成相当于任意整数倍的物品$A$的价值和重量，在这个问题当中就是1， 2， 4， 8可以组成1~15之间任意一个数。
+
+因为我们最终可能$S$个物品当中全部选了，因此当我们将多重背包转化成01背包之后，所有转化之后的物品的价值和体积需要和$S$个物品相同，而$S$不一定恰好就是$n$个整数幂的值相加，因此在上文当中还提到了$a$，$a$就保证了我们最终可以取到1~$S$之间任意一个数。
 
 ## 总结
 
-本篇文章主要给大家介绍的**多重背包问题**的二进制优化，里面的逻辑还是稍微有点复杂的，大家在看文字的时候可以参考代码仔细分析，可以理解的更好一点。
+本篇文章主要给大家介绍的**多重背包问题**的二进制优化，里面的逻辑还是稍微有点复杂的，可能需要大家仔细去体会，大家在看文字的时候可以参考代码仔细分析，可以理解的更好一点。
 
-以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！（记得点赞收藏哦！）
+以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！（记得**点赞**收藏哦！）
 
 ---
 
