--- a/datastructr&algorithm/04多重背包v2.md
+++ b/datastructr&algorithm/04多重背包v2.md
@@ -16,7 +16,7 @@
 
 ### 二进制优化的实现
 
-在正式分析**多重背包的二进制优化**之前，我们先分析一下**多重背包的时间复杂度**，假设我们有$N$件物品，平均每个物品的个数为$S$，那么多重背包的的时间复杂度为$O(NSV)$。而多重背包的二进制优化可以将这个时间复杂度降低到$O(NV)$。
+在正式分析**多重背包的二进制优化**之前，我们先分析一下**多重背包的时间复杂度**，假设我们有$N$件物品，平均每个物品的个数为$S$，那么多重背包的的时间复杂度为$O(NSV)$。而多重背包的二进制优化可以将这个时间复杂度降低到$O(NVlog(S))$。
 
 在[多重背包上篇](https://juejin.cn/post/7120663634354634788)上篇当中我们提到了多重背包的动态转移方程（ $T = min(S, \frac{V}{v_i})$，其中$S$表示物品能够选择的次数，$v_i$表示物品的体积，$V$表示当前背包的容量）：
 $$
@@ -86,7 +86,7 @@ $$
 
 相信经过上面的例子之后你已经大致明白了二进制优化的大致实现过程，二进制优化也是将**多重背包**转化成**01背包**但是和之前的转化不同的是，我们不是将$S$个物品$A$划分成$S$个体积和价值相同的物品，而是将其划分成体积和价值是原来的物品1倍、2倍、3倍，....，$2^n$倍的物品，即$1 + 2 + 4 + ... + 2^n + a = S$，其中$a$是最后的剩下的余数（$a \lt 2^{n + 1}$），比如上面最后一个2就是`a = 9 - 1 - 2 - 4`。这样的划分我们可以知道，我们划分之后的物品的数目会少非常多。如果物品的次数的最大值是`int`类型的最大值，如果我们一个一个的划分最多可以划分超过20亿个物品，而上面的划分方式，我们划分出来的物品不会超过32个，因此大大降低了时间复杂度。
 
-之前一个一个的划分我们的时间复杂度为$O(NSV)$，而像上面那样划分我们最大的时间复杂度为$O(32NV) = O(NV)$，其中$N$表示物品的个数，$S$表示物品能够选择的次数，$V$表示背包的容量。
+之前一个一个的划分我们的时间复杂度为$O(NSV)$，而像上面那样划分我们最大的时间复杂度为$O(NVlog(S))$，其中$N$表示物品的个数，$S$表示物品能够选择的平均次数，$V$表示背包的容量。
 
 上面就是我们使用二进制优化方式将**多重背包**转化成**01背包**的方式，完整代码如下（下方代码使用了单行数组优化）：
 
