--- a/datastructr&algorithm/05深入剖析斐波拉契数列.md
+++ b/datastructr&algorithm/05深入剖析斐波拉契数列.md
@@ -413,9 +413,7 @@ public class Fibonacci {
 
 ## 总结
 
-本篇文章主要给大家介绍的**多重背包问题**的二进制优化，里面的逻辑还是稍微有点复杂的，可能需要大家仔细去体会，大家在看文字的时候可以参考代码仔细分析，可以理解的更好一点。
-
-以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！（记得**点赞**收藏哦！）
+在本篇文章当中主要和大家一起从0开始剖析斐波拉契数列问题，有几个优化过程，整体的内容还是比较多的，希望大家有所收获，我是LeHung，我们下期再见！！！（记得**点赞**收藏哦！）
 
 ---
 
