--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -1,3 +1,21 @@
 # 01背包面试题系列（一）
 
 ## 题目描述——[分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/)
+
+>给你一个 **只包含正整数** 的 **非空** 数组 `nums` 。请你判断是否可以将这个数组分割成两个子集，使得两个子集的元素和相等。
+>
+>**示例 1：**
+>
+>```java
+>输入：nums = [1,5,11,5]
+>输出：true
+>解释：数组可以分割成 [1, 5, 5] 和 [11] 。
+>```
+>
+>**示例 2：**
+>
+>```
+>输入：nums = [1,2,3,5]
+>输出：false
+>解释：数组不能分割成两个元素和相等的子集。
+>```
