update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -19,3 +19,12 @@
 >输出：false
 >解释：数组不能分割成两个元素和相等的子集。
 >```
+
+## 01背包动态规划求解
+
+上面的问题乍一看好像是一个子集划分的问题，我们可能根据数据`nums`得到它的所有的子集，然后将所有的自己加起来看看是否存在一个子集的数据的和等于`nums`数组所有数据的和的一半，其实我们确实可以这样做，我们将在后文当中仔细探讨这个方法。
+
+那么我们改如何使用**01背包**去解决这个问题呢？我们首先先回顾一下**01背包**解决了什么问题：
+
+>有 $N$件物品和一个容量是 $V$ 的背包。每件物品只能使用`一次`。第$i$件物品的体积是$v_i$，价值是 $w_i$。求解将哪些物品装入背包，可使这些物品的总体积不超过背包容量，且总价值最大。
+
