update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -28,3 +28,7 @@
 
 >有 $N$件物品和一个容量是 $V$ 的背包。每件物品只能使用`一次`。第$i$件物品的体积是$v_i$，价值是 $w_i$。求解将哪些物品装入背包，可使这些物品的总体积不超过背包容量，且总价值最大。
 
+**01背包**就是给定一定容量的背包，看他能够装入物品的最大的价值。那么我们该如何将上述问题转化成**01背包**呢？
+
+我们可以这样，将`nums`数组当中的数值变成物品对应的价值和体积，比如说`nums = [1, 2, 3]`，我们就可以分成三个物品，这三个物品的体积和价值分别是`1和1`、`2和2`和`3和3`。
+
