update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -30,5 +30,5 @@
 
 **01背包**就是给定一定容量的背包，看他能够装入物品的最大的价值。那么我们该如何将上述问题转化成**01背包**呢？
 
-我们可以这样，将`nums`数组当中的数值变成物品对应的价值和体积，比如说`nums = [1, 2, 3]`，我们就可以分成三个物品，这三个物品的体积和价值分别是`1和1`、`2和2`和`3和3`。
+我们可以这样，将`nums`数组当中的数值变成物品对应的价值和体积，比如说`nums = [1, 2, 3]`，我们就可以分成三个物品，这三个物品的体积和价值分别是`1和1`、`2和2`和`3和3`，我们背包的容量为`V = (1 + 2 + 3) / 2`。我们将`nums`数组当中所有数据和的一半作为背包的容量，`nums`当中的数值就表示每一个物品的价值和体积，而且价值和体积都相等，如果我们能够恰好装满背包就说明，存在一种物品的组合他的和为`nums`数组当中数据的和的一半。
 
