update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -32,7 +32,32 @@
 
 我们可以这样，将`nums`数组当中的数值变成物品对应的价值和体积，比如说`nums = [1, 2, 3]`，我们就可以分成三个物品，这三个物品的体积和价值分别是`1和1`、`2和2`和`3和3`，我们背包的容量为`V = (1 + 2 + 3) / 2`。我们将`nums`数组当中所有数据和的一半作为背包的容量，`nums`当中的数值就表示每一个物品的价值和体积，而且价值和体积都相等，如果我们能够恰好装满背包就说明，存在一种物品的组合他的和为`nums`数组当中数据的和的一半。
 
-那么我们改如何判断背包被恰好装满呢？我们知道背包问题求解的只是在背包容量一定的情况下，我们能够获取的最大的价值是多少，因此好像不能够判断背包是否装满！但是在上面转化的过程当中物品的体积和价值是相等的，因为我们可以根据我们获得的最大价值判断，如果我们最终得到的收益等于背包的容量，那么说明背包被填满了，也就是存在一种物品的组合我们能够获取的最大的价值等于数组当中数据和的一半。
+那么我们该如何判断背包被恰好装满呢？我们知道背包问题求解的只是在背包容量一定的情况下，我们能够获取的最大的价值是多少，因此好像不能够判断背包是否装满！但是在上面转化的过程当中物品的体积和价值是相等的，因为我们可以根据我们获得的最大价值判断，如果我们最终得到的收益等于背包的容量，那么说明背包被填满了，也就是存在一种物品的组合我们能够获取的最大的价值等于数组当中数据和的一半。因为物品的价值和体积相等，因此把背包填满和获取最大价值是等价的。
 
+因此根据上面的分析，如果我们想用01背包去解决这个问题，我们可以将背包容量设置为`nums`数组当中数据和的一半，物品的个数为数组的长度，物品的价值和体积为数组当中对应位置的值，然后进行01背包求解即可。
 
+因此我们的代码如下：
+
+```java
+class Solution {
+    private List<List<Integer>> ans = new ArrayList<>();
+    public List<List<Integer>> combine(int n, int k) {
+        backTrace(n, k, new ArrayList<>(), 1);
+        return ans;
+    }
+
+    public void backTrace(int n, int k, List<Integer> path, int curIndex) {
+        if (path.size() == k) {
+            ans.add(new ArrayList<>(path));
+            return;
+        } else if ((n - curIndex + 1 + path.size()) < k )
+            return;
+        for (int i = curIndex; i <= n; i++) {
+            path.add(i);
+            backTrace(n, k, path, i +1 );
+            path.remove(path.size() - 1);
+        }
+    }
+}
+```
 
