update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -36,28 +36,27 @@
 
 因此根据上面的分析，如果我们想用01背包去解决这个问题，我们可以将背包容量设置为`nums`数组当中数据和的一半，物品的个数为数组的长度，物品的价值和体积为数组当中对应位置的值，然后进行01背包求解即可。
 
+如果你还不是很了解01背包的话，可以先看[这篇文章](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)，该文章主要从0开始介绍了01背包问题，从二维数组到滚动数组再到一维数组，优化过程层层递进，带你从原理到实战完全掌握01背包问题。
+
 因此我们的代码如下：
 
 ```java
 class Solution {
-    private List<List<Integer>> ans = new ArrayList<>();
-    public List<List<Integer>> combine(int n, int k) {
-        backTrace(n, k, new ArrayList<>(), 1);
-        return ans;
+  public boolean canPartition(int[] nums) {
+    int sum = 0;
+    for (int num : nums) {
+      sum += num;
     }
-
-    public void backTrace(int n, int k, List<Integer> path, int curIndex) {
-        if (path.size() == k) {
-            ans.add(new ArrayList<>(path));
-            return;
-        } else if ((n - curIndex + 1 + path.size()) < k )
-            return;
-        for (int i = curIndex; i <= n; i++) {
-            path.add(i);
-            backTrace(n, k, path, i +1 );
-            path.remove(path.size() - 1);
-        }
+    if ((sum & 1) == 1) return false;
+    int t = sum / 2;
+    int[] dp = new int[t + 1];
+    for (int i = 0; i < nums.length; i++) {
+      for (int j = t; j >= nums[i]; j--) {
+        dp[j] = Math.max(dp[j], dp[j - nums[i]] + nums[i]);
+      }
     }
+    return dp[t] == t;
+  }
 }
 ```
 
