update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -38,7 +38,7 @@
 
 如果你还不是很了解01背包的话，可以先看[这篇文章](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)，该文章主要从0开始介绍了01背包问题，从二维数组到滚动数组再到一维数组，优化过程层层递进，带你从原理到实战完全掌握01背包问题。
 
-因此我们的代码如下：
+因此我们的代码如下（一维数组优化）：
 
 ```java
 class Solution {
@@ -57,6 +57,49 @@ class Solution {
     }
     return dp[t] == t;
   }
+}
+```
+
+## 子集划分求解
+
+<img src="../images/dsal/backtrace/01.png" alt="01" style="zoom:80%;" />
+
+<img src="../images/dsal/backtrace/02.png" alt="01" style="zoom:80%;" />
+
+```java
+class Solution {
+    private int target;
+    public boolean canPartition(int[] nums) {
+
+        int sum = 0;
+        for (int num : nums) {
+            sum += num;
+        }
+        if ((sum & 1) == 1 ) return false;
+        target = sum / 2;
+        for (int i = 0; i < nums.length; i++) {
+            if (backTrace(1, nums[0], nums))
+                return true;
+        }
+        return false;
+    }
+
+    public boolean backTrace(int curIndex, int curSum, int[] nums) {
+
+        if (curSum > target)
+            return false;
+        else if (curSum == target)
+            return true;
+
+        for (int i = curIndex; i < nums.length; i++) {
+            curSum += nums[i];
+            if (backTrace(i + 1, curSum, nums))
+                return true;
+            curSum -= nums[i];
+        }
+        return false;
+    }
+
 }
 ```
 
