update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -62,6 +62,12 @@ class Solution {
 
 ## 子集划分求解
 
+我们知道任何一个集合的子集个数为$2^n$，其中$n$表示集合当中数据的个数，比如说集合${1, 2}$有如下子集（4个）：
+$$
+\{\}, \{1\}, \{2\}, \{1, 2\}
+$$
+
+
 <img src="../images/dsal/backtrace/01.png" alt="01" style="zoom:80%;" />
 
 <img src="../images/dsal/backtrace/02.png" alt="01" style="zoom:80%;" />
