update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -66,14 +66,20 @@ class Solution {
 $$
 \{空集\}, \{1\}, \{2\}, \{1, 2\}
 $$
-
+我们先思考一下$2^n$是怎么计算出来的！我们在生成子集的时候对于每一个数据都有选择和不选择两种情况，这其实就变成了一个排列组合问题。在上面的例子当中1可选可不选（2），2可选可不选（2），因此总的集合个数为4，那么如果有n个数据的集合那么自己个数就等于：
+$$
+2\times2\times2 \cdots = 2^n
+$$
+这个选择情况的划分如下图所示：
 
 <img src="../images/dsal/backtrace/01.png" alt="01" style="zoom:80%;" />
 
 <img src="../images/dsal/backtrace/02.png" alt="01" style="zoom:80%;" />
 
+而我们使用程序去计算一个集合的子集其实就是一个回溯的问题，分割等和子集的子集划分的代码如下：
+
 ```java
-class Solution {
+public class Solution {
     private int target;
     public boolean canPartition(int[] nums) {
 
@@ -82,30 +88,33 @@ class Solution {
             sum += num;
         }
         if ((sum & 1) == 1 ) return false;
+        // 我们最终的目标就是找到一个自己的和等于这个数
         target = sum / 2;
-        for (int i = 0; i < nums.length; i++) {
-            if (backTrace(1, nums[0], nums))
-                return true;
-        }
-        return false;
+        return backTrace(0, nums[0], nums);
     }
 
+    /**
+   * @param curIndex 表示当前遍历的数组的位置
+   * @param curSum   当前集合所有数据的和
+   * @param nums     待遍历的数组
+   * @return
+   */
     public boolean backTrace(int curIndex, int curSum, int[] nums) {
-
-        if (curSum > target)
-            return false;
-        else if (curSum == target)
+        if (curSum == target) return true;
+        // 这里是剪枝操作 如果当前的和已经大于目标值或者
+        // 遍历的下标超过数组的长度了就返回 false 表示
+        // 这个分支没有找到一个集合，集合当中的数据之和等于 target
+        else if (curSum > target || curIndex >= nums.length - 1) return false;
+        curSum += nums[curIndex + 1];
+        if (backTrace(curIndex + 1, curSum, nums))
             return true;
-
-        for (int i = curIndex; i < nums.length; i++) {
-            curSum += nums[i];
-            if (backTrace(i + 1, curSum, nums))
-                return true;
-            curSum -= nums[i];
-        }
-        return false;
+        // 回溯操作
+        curSum -= nums[curIndex + 1];
+        return backTrace(curIndex + 1, curSum, nums);
     }
-
 }
+
 ```
+
+
 
