update 01 backpack problems

--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -90,7 +90,7 @@ public class Solution {
         if ((sum & 1) == 1 ) return false;
         // 我们最终的目标就是找到一个自己的和等于这个数
         target = sum / 2;
-        return backTrace(0, nums[0], nums);
+        return backTrace(-1, 0, nums);
     }
 
     /**
@@ -105,10 +105,11 @@ public class Solution {
         // 遍历的下标超过数组的长度了就返回 false 表示
         // 这个分支没有找到一个集合，集合当中的数据之和等于 target
         else if (curSum > target || curIndex >= nums.length - 1) return false;
+        // 选择某个数据
         curSum += nums[curIndex + 1];
         if (backTrace(curIndex + 1, curSum, nums))
             return true;
-        // 回溯操作
+        // 不选择某个数据 对应这回溯的操作
         curSum -= nums[curIndex + 1];
         return backTrace(curIndex + 1, curSum, nums);
     }
@@ -116,5 +117,17 @@ public class Solution {
 
 ```
 
+我们知道动态规划的时间复杂度为$O(n^2)$，而这个使用生成子集的方法的话时间复杂度为$O(2^n)$。因此如果你再**LeetCode**上提交这个代码会超时。
 
+## 总结
+
+本文主要给大家介绍**分割等和子集**这个题目，这个题目的即可以使用动态规划进行求解也能使用回溯法进行求解，但是回溯法求解问题的时间复杂度太高。使用动态规划求解的方法还是比较抽象，可能需要大家花时间好好琢磨一下，希望大家有所收获，我是LeHung，我们下期再见！！！（记得**点赞**收藏哦！）
+
+---
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：一无是处的研究僧，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
 
