--- a/datastructr&algorithm/0601背包例题1.md
+++ b/datastructr&algorithm/0601背包例题1.md
@@ -117,7 +117,7 @@ public class Solution {
 
 ```
 
-我们知道动态规划的时间复杂度为$O(n^2)$，而这个使用生成子集的方法的话时间复杂度为$O(2^n)$。因此如果你再**LeetCode**上提交这个代码会超时。
+我们知道动态规划的时间复杂度为$O(nm)$，其中$m$表示`nums`数组的和的一半，$n$表示数组当中数据的个数，而这个使用生成子集的方法的话时间复杂度为$O(2^n)$。因此如果你再**LeetCode**上提交这个代码会超时。
 
 ## 总结
 
