add backpack problems

--- a/datastructr&algorithm/0801背包例题2.md
+++ b/datastructr&algorithm/0801背包例题2.md
@@ -28,7 +28,9 @@
 
 在读完题目之后，我们的第一感觉就是，如果我们能过恰好将所有的物品分成重量相同的两堆就好了，这样最终剩下的石头的重量就等于0！比如说我们分成的两堆石头的重量分别为`[1, 2, 3, 4, 5]`, `[10, 2, 3]`，那么我们就可以使用`[2, 3, 5]`和`[10]`进行碰撞，这样最后剩下的重量为0， 现在还剩下`[1, 4]`和`[2, 3]`，那么我们可以使用`[4]`和`[3]`进行碰撞，那么剩下的为`[1, 1]`和`[2]`，那么碰完之后剩下石头的重量就等于0了。
 
+在经过上面的例子之后你看你已经理解为什么我们要将所有的石头尽可能的分成两堆重量一样的了，即使重量不一样我们也需要尽可能的将他们之间的差距变小，最后剩下的物品的重量就等于所有物品的重量和减去重量较小的一堆的2倍。
 
+那么我们现在的任务就变成了
 
 ## 总结
 
