--- a/datastructr&algorithm/0801背包例题2.md
+++ b/datastructr&algorithm/0801背包例题2.md
@@ -30,7 +30,9 @@
 
 在经过上面的例子之后你看你已经理解为什么我们要将所有的石头尽可能的分成两堆重量一样的了，即使重量不一样我们也需要尽可能的将他们之间的差距变小，最后剩下的物品的重量就等于所有物品的重量和减去重量较小的一堆的2倍。
 
-那么我们现在的任务就变成了
+假设所有的石头的重量和为$S$，那么我们现在的任务就变成了如果我们有一个篮子，他可以承受的重量为$\frac{S}{2}$，我们需要从所有的石头当中进行选择，在不超过篮子能够承受的重量的情况下，我们能够在篮子当中放入最大的石头的重量和是多少？如果我们求出辣的最大的石头的重量和等于$V$，那么上面一题的答案就等于$S - 2\times V$。
+
+
 
 ## 总结
 
