--- a/datastructr&algorithm/0801背包例题2.md
+++ b/datastructr&algorithm/0801背包例题2.md
@@ -32,7 +32,7 @@
 
 假设所有的石头的重量和为$S$，那么我们现在的任务就变成了如果我们有一个篮子，他可以承受的重量为$\frac{S}{2}$，我们需要从所有的石头当中进行选择，在不超过篮子能够承受的重量的情况下，我们能够在篮子当中放入最大的石头的重量和是多少？如果我们求出辣的最大的石头的重量和等于$V$，那么上面一题的答案就等于$S - 2\times V$。
 
-
+如果能够恰好装满篮子那么我们恰好能够将所有的石头分成两份重量相等的石头，最终剩下的重量为$S - 2 \times \frac{S}{2} = 0$。
 
 ## 总结
 
