update backpack problems 2

--- a/datastructr&algorithm/0801背包例题2.md
+++ b/datastructr&algorithm/0801背包例题2.md
@@ -24,6 +24,10 @@
 > 输入：stones = [31,26,33,21,40]
 > 输出：5
 
+## 前言
+
+本文所谈到的题目是**01背包问题**的一个变种，如果你还不是很了解**01背包**的话，可以先看[这篇文章](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)，该文章主要从0开始介绍了01背包问题，从二维数组到滚动数组再到一维数组，优化过程层层递进，带你从原理到实战完全掌握01背包问题。
+
 ## 问题分析
 
 在读完题目之后，我们的第一感觉就是，如果我们能过恰好将所有的物品分成重量相同的两堆就好了，这样最终剩下的石头的重量就等于0！比如说我们分成的两堆石头的重量分别为`[1, 2, 3, 4, 5]`, `[10, 2, 3]`，那么我们就可以使用`[2, 3, 5]`和`[10]`进行碰撞，这样最后剩下的重量为0， 现在还剩下`[1, 4]`和`[2, 3]`，那么我们可以使用`[4]`和`[3]`进行碰撞，那么剩下的为`[1, 1]`和`[2]`，那么碰完之后剩下石头的重量就等于0了。
@@ -33,6 +37,10 @@
 假设所有的石头的重量和为$S$，那么我们现在的任务就变成了如果我们有一个篮子，他可以承受的重量为$\frac{S}{2}$，我们需要从所有的石头当中进行选择，在不超过篮子能够承受的重量的情况下，我们能够在篮子当中放入最大的石头的重量和是多少？如果我们求出辣的最大的石头的重量和等于$V$，那么上面一题的答案就等于$S - 2\times V$。
 
 如果能够恰好装满篮子那么我们恰好能够将所有的石头分成两份重量相等的石头，最终剩下的重量为$S - 2 \times \frac{S}{2} = 0$。
+
+## 问题转化
+
+如果你之前已经了解过**01背包问题**相信在经过上面的分析之后你会发现，这个问题可以转化成一个背包问题，因为我们在经过上面的问题转换之后，我们的任务变成了，对于每个石头我们可以选择一次，它的重量和价值相等，当我们的背包能够承受的重量等于所有石头重量和的一半时，我们能够获取的最大的价值是多少？在上文当中我们说的是，如果我们有一个篮子，他可以承受的重量为$\frac{S}{2}$，能够放入篮子石头的最大重量，但是我们的设置石头的价值和重量是相等的，因此能够获取的最大价值和承受的最大重量是等价的。
 
 ## 总结
 
