--- a/datastructr&algorithm/0801背包例题2.md
+++ b/datastructr&algorithm/0801背包例题2.md
@@ -42,6 +42,8 @@
 
 如果你之前已经了解过**01背包问题**相信在经过上面的分析之后你会发现，这个问题可以转化成一个背包问题，因为我们在经过上面的问题转换之后，我们的任务变成了，对于每个石头我们可以选择一次，它的重量和价值相等，当我们的背包能够承受的重量等于所有石头重量和的一半时，我们能够获取的最大的价值是多少？在上文当中我们说的是，如果我们有一个篮子，他可以承受的重量为$\frac{S}{2}$，能够放入篮子石头的最大重量，但是我们的设置石头的价值和重量是相等的，因此能够获取的最大价值和承受的最大重量是等价的。
 
+<img src="../images/dsal/dp/01-dp37.png" alt="01-dp36" style="zoom:80%;" />
+
 ## 总结
 
 本文主要给大家介绍**分割等和子集**这个题目，这个题目的即可以使用动态规划进行求解也能使用回溯法进行求解，但是回溯法求解问题的时间复杂度太高。使用动态规划求解的方法还是比较抽象，可能需要大家花时间好好琢磨一下，希望大家有所收获，我是LeHung，我们下期再见！！！（记得**点赞**收藏哦！）
