update backpack problems 2

--- a/datastructr&algorithm/0801背包例题2.md
+++ b/datastructr&algorithm/0801背包例题2.md
@@ -67,7 +67,7 @@ class Solution {
 
 ## 总结
 
-本文主要给大家介绍**分割等和子集**这个题目，这个题目的即可以使用动态规划进行求解也能使用回溯法进行求解，但是回溯法求解问题的时间复杂度太高。使用动态规划求解的方法还是比较抽象，可能需要大家花时间好好琢磨一下，希望大家有所收获，我是LeHung，我们下期再见！！！（记得**点赞**收藏哦！）
+本文主要给大家介绍**最后一块石头的重量 II**这个题目，这个题目主要就是一个01背包的变种，主要要的问题就是如何将这个问题转化成01背包问题，这是本文所提到的问题的解决核心，其实在很多算法题当中，最终要的就是需要学会将问题进行转化，将一个不熟悉的问题转化成一个我们熟悉的算法。使用动态规划求解的方法还是比较抽象，可能需要大家花时间好好琢磨一下，希望大家有所收获，我是LeHung，我们下期再见！！！（记得**点赞**收藏哦！）
 
 ---
 
