--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -2,7 +2,9 @@
 
 ## 前言
 
-在本篇文章当中主要跟大家介绍中缀和后缀表达式以及他们在表达式求值当中的应用，这一个一个比较经典的计算机系统基础问题，
+在本篇文章当中主要跟大家介绍中缀和后缀表达式以及他们在表达式求值当中的应用，这一个比较经典的计算机系统基础问题，但是整个过程比较抽象，本文主要通过图解的方法帮助大家理解这个问题。
 
 ## 正文
+
+后缀表达式也称作逆波兰表达式，前缀表达式也称作波兰表达式，这个是因为这是由波兰数学家**杨-武卡谢维奇**提出来的，用于简化命题逻辑的一种方法。
 
