update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -8,5 +8,11 @@
 
 后缀表达式也称作逆波兰表达式，前缀表达式也称作波兰表达式，这个是因为这是由波兰数学家**杨-武卡谢维奇**提出来的，用于简化命题逻辑的一种方法。
 
-我们常见的数学表达式就是中缀表达式，比如说：$1 + 2$，像这种我们从小到大经常见到的表达式就叫做中缀表达式，这个表达式的特点就是将**运算符**放在两个操作数中间，将**操作数**放在**运算符**的两边。
+### 中缀表达式
+
+我们常见的数学表达式就是中缀表达式，比如说：$1 + 2$，像这种我们从小到大经常见到的表达式就叫做中缀表达式，这个表达式的特点就是将**运算符**（加减乘除）放在两个操作数（数字）中间，将**操作数**放在**运算符**的两边。
+
+### 后缀表达式
+
+后缀表达式和中缀表达式的最大区别就是，他不是将**运算符**放在**操作数**中间，而是将**运算符**放在**操作数**后面，比如上面的中缀表达式$1 + 2$转化成后缀表达式就为$12+$。
 
