update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -16,3 +16,7 @@
 
 后缀表达式和中缀表达式的最大区别就是，他不是将**运算符**放在**操作数**中间，而是将**运算符**放在**操作数**后面，比如上面的中缀表达式$1 + 2$转化成后缀表达式就为$12+$。
 
+### 前缀表达式
+
+前缀表达式就是将**运算符**放在**操作数**的前面，比如上面的中缀表达式$1 + 2$转化成前缀表达式之后为$+12$。
+
