update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -20,3 +20,32 @@
 
 前缀表达式就是将**运算符**放在**操作数**的前面，比如上面的中缀表达式$1 + 2$转化成前缀表达式之后为$+12$。
 
+### 表达式之间转化的例子
+
+上面的表达式还是比较简单，可能不足以帮助大家好好理解表达式之间的转化过程。
+
+中缀表达式：$A + B * (C - D) - E / F$
+
+现在我们来将上面的中缀表达式转化成后缀表达式，我们的第一个计算的部分如下：
+
+<img src="../images/expression/01.png" alt="01" style="zoom:80%;" />
+
+根据我们的转化原理：将**运算符**放在**操作数**后面，
+
+<img src="../images/expression/02.png" alt="01" style="zoom:80%;" />
+
+上面的得到的后缀表达式继续进行转化：
+
+<img src="../images/expression/05.png" alt="01" style="zoom:80%;" />
+
+继续进行转化：
+
+<img src="../images/expression/06.png" alt="01" style="zoom:80%;" />
+
+继续进行转化：
+
+<img src="../images/expression/07.png" alt="01" style="zoom:80%;" />
+
+得到最终的结果：
+
+<img src="../images/expression/08.png" alt="01" style="zoom:80%;" />
