--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -49,3 +49,15 @@
 得到最终的结果：
 
 <img src="../images/expression/08.png" alt="01" style="zoom:80%;" />
+
+## 程序如何将中缀表达式转化成后缀表达式
+
+将中缀表达式转化成后缀表达式有一下几条规则：
+
+- 从左到右进行遍历。
+- 遇到操作数，直接加入到后缀表达式当中。
+- 遇到界限符。遇到“(”直接入栈，遇到“)”则依次弹出栈内运算符并加入后缀表达式，直到弹出“(” 为止，注意:“(” 不加入后缀表达式。
+- 遇到运算符。依次弹出栈中优先级高于或等于当前运算符的所有运算符，并加入后缀表达式，若碰到“(”或栈空则停止。之后再把当前运算符入栈。
+
+现在我们根据上面的规则来将上文当中的中缀表达式转化成后缀表达式。
+
