update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -61,3 +61,8 @@
 
 现在我们根据上面的规则来将上文当中的中缀表达式转化成后缀表达式。
 
+- 遍历到$A$，根据第二条规则，将$A$加入到后缀表达式当中，当前的后缀表达式为：$A$。
+
+<img src="../images/expression/09.png" alt="01" style="zoom:80%;" />
+
+- 
