update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -65,4 +65,31 @@
 
 <img src="../images/expression/09.png" alt="01" style="zoom:80%;" />
 
-- 
+- 现在遍历到加号，根据前面的规则需要弹出栈里面优先级大的运算符，再将加号加入到栈中，当前的后缀表达式为$A$。
+
+<img src="../images/expression/11.png" alt="01" style="zoom:80%;" />
+
+- 遍历到$B$，直接加入到后缀表达式当中，目前的后缀表达式为$AB$。
+
+<img src="../images/expression/12.png" alt="01" style="zoom:80%;" />
+
+- 遍历到$*$，根据规则直接将其加入到栈中，当前后缀表达式为$AB$。
+
+<img src="../images/expression/13.png" alt="01" style="zoom:80%;" />
+
+- 遍历到$($，根据规则直接将其加入到栈中，当前后缀表达式为$AB$。
+
+<img src="../images/expression/14.png" alt="01" style="zoom:80%;" />
+
+- 遍历到$C$，则直接将其加入到后缀表达式当中，当前后缀表达式为$ABC$。
+
+- 遍历到$-$，根据规则将其加入到栈中，当前后缀表达式为$ABC$。
+
+<img src="../images/expression/15.png" alt="01" style="zoom:80%;" />
+
+- 遍历到$D$，则将其直接加入到后缀表达式当中，当前的后缀表达式为$ABCD$。
+
+- 遍历到$)$，则需要将栈中的符号弹出，直到遇到$($，当中的后缀表达式为$ABCD-$。
+
+<img src="../images/expression/16.png" alt="01" style="zoom:80%;" />
+
