update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -89,7 +89,19 @@
 
 - 遍历到$D$，则将其直接加入到后缀表达式当中，当前的后缀表达式为$ABCD$。
 
-- 遍历到$)$，则需要将栈中的符号弹出，直到遇到$($，当中的后缀表达式为$ABCD-$。
+- 遍历到$)$，则需要将栈中的符号弹出，直到遇到$($，当前的后缀表达式为$ABCD-$。
 
 <img src="../images/expression/16.png" alt="01" style="zoom:80%;" />
 
+- 遍历到$-$，需要将占中优先级大于等于$-$的运算符弹出，则当前的后缀表达式为$ABCD-*+$，再将$-$压入栈中。
+
+<img src="../images/expression/17.png" alt="01" style="zoom:80%;" />
+
+- 遍历到$E$，直接将数字加入到后缀表达式当中，则当前的后缀表达式为$ABCD-*+E$。
+
+- 遍历到$/$，将栈中优先级大于等于$/$的运算符，再将$/$压入到栈中，当前的后缀表达式为$ABCD-*+E$。
+
+<img src="../images/expression/19.png" alt="01" style="zoom:80%;" />
+
+- 遍历到$F$，直接将其加入到后缀表达式当中，则当前的后缀表达式为$ABCD-*+EF$。
+- 最终将栈中所有的运算符都弹出，得到的后缀表达式为$ABCD-*+EF/-$。
