--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -52,7 +52,7 @@
 
 ## 程序如何将中缀表达式转化成后缀表达式
 
-将中缀表达式转化成后缀表达式有一下几条规则：
+将中缀表达式转化成后缀表达式有一下几条规则（下面的栈是存储操作符的栈）：
 
 - 从左到右进行遍历。
 - 遇到操作数，直接加入到后缀表达式当中。
@@ -105,3 +105,11 @@
 
 - 遍历到$F$，直接将其加入到后缀表达式当中，则当前的后缀表达式为$ABCD-*+EF$。
 - 最终将栈中所有的运算符都弹出，得到的后缀表达式为$ABCD-*+EF/-$。
+
+## 后缀表达式求值
+
+在前文当中我们已经得到了表达式$A + B * (C - D) - E / F$的后缀表达式为$ABCD-*+EF/-$。现在我们需要将这个后缀表达式进行求值。根据后缀表达式求值主要有一下两条规则：
+
+- 如果遇到数字直接将其加入到数字栈。
+- 如果遇到操作符直接从操作数栈弹出两个数据进行对应的运算，再将运算结果加入到栈中。
+
