update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -113,3 +113,17 @@
 - 如果遇到数字直接将其加入到数字栈。
 - 如果遇到操作符直接从操作数栈弹出两个数据进行对应的运算，再将运算结果加入到栈中。
 
+现在我们进行后缀表达式的求值过程;
+
+- 首先前面四个$ABCD$都是数字，根据上面提到的第一条规则，我们都需要将数字压入到栈当中，因此遍历四个数字之后，情况如下：
+
+<img src="../images/expression/21.png" alt="01" style="zoom:80%;" />
+
+- 现在遍历到$-$，我们需要将$D$和$C$弹出，然后进行$-$操作的运算，在将结果压入栈中。
+
+<img src="../images/expression/23.png" alt="01" style="zoom:80%;" />
+
+- 现在遍历到$*$，我们需要将$C-D=M$和$B$弹出，进行乘法运算，然后将结果压入栈中。
+
+<img src="../images/expression/24.png" alt="01" style="zoom:80%;" />
+
