update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -125,5 +125,12 @@
 
 - 现在遍历到$*$，我们需要将$C-D=M$和$B$弹出，进行乘法运算，然后将结果压入栈中。
 
-<img src="../images/expression/24.png" alt="01" style="zoom:80%;" />
+<img src="../images/expression/25.png" alt="01" style="zoom:80%;" />
 
+- 现在我们遍历到$+$，需要将栈中剩余的两个数弹出，进行加法运算，在将结果压栈。
+
+<img src="../images/expression/26.png" alt="01" style="zoom:80%;" />
+
+- 遍历$EF$都需要将这两个数压入到栈当中。
+
+<img src="../images/expression/27.png" alt="01" style="zoom:80%;" />
