update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -134,3 +134,11 @@
 - 遍历$EF$都需要将这两个数压入到栈当中。
 
 <img src="../images/expression/27.png" alt="01" style="zoom:80%;" />
+
+- 现在遍历到$/$，需要进行除法运算，在将得到的结果压入到栈中。
+
+<img src="../images/expression/28.png" alt="01" style="zoom:80%;" />
+
+- 最后遍历到$-$，将栈中的两个数弹出栈，进行减法运算得到最后的结果。
+
+<img src="../images/expression/29.png" alt="01" style="zoom:80%;" />
