--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -142,3 +142,87 @@
 - 最后遍历到$-$，将栈中的两个数弹出栈，进行减法运算得到最后的结果。
 
 <img src="../images/expression/29.png" alt="01" style="zoom:80%;" />
+
+相信经过上面过程你对后缀表达式求值的过程已经非常清楚了。
+
+## 代码实现
+
+在**LeetCode**中有一道题就是根据后缀表达式求值：
+
+>根据[ 逆波兰表示法](https://baike.baidu.com/item/逆波兰式/128437)，求该后缀表达式的计算结果。
+>
+>有效的算符包括 `+`、`-`、`*`、`/` 。每个运算对象可以是整数，也可以是另一个逆波兰表达式。
+>
+>**说明：**
+>
+>- 整数除法只保留整数部分。
+>- 给定逆波兰表达式总是有效的。换句话说，表达式总会得出有效数值且不存在除数为 0 的情况。
+>
+>示例 1：
+>
+>输入：tokens = ["2","1","+","3","*"]
+>输出：9
+>解释：该算式转化为常见的中缀算术表达式为：((2 + 1) * 3) = 9
+>
+>示例 2：
+>
+>输入：tokens = ["4","13","5","/","+"]
+>输出：6
+>解释：该算式转化为常见的中缀算术表达式为：(4 + (13 / 5)) = 6
+>
+>示例 3：
+>
+>输入：tokens = ["10","6","9","3","+","-11","*","/","*","17","+","5","+"]
+>输出：22
+>解释：
+>该算式转化为常见的中缀算术表达式为：
+>  ((10 * (6 / ((9 + 3) * -11))) + 17) + 5
+>= ((10 * (6 / (12 * -11))) + 17) + 5
+>= ((10 * (6 / -132)) + 17) + 5
+>= ((10 * 0) + 17) + 5
+>= (0 + 17) + 5
+>= 17 + 5
+>= 22
+
+上面问题的代码如下：
+
+```java
+class Solution {
+  public int evalRPN(String[] tokens) {
+    Stack<Integer> stack = new Stack<>();
+    for (String token : tokens) {
+      switch (token) {
+        case "+": {
+          int a = stack.pop();
+          int b = stack.pop();
+          stack.push(b + a);
+          break;
+        }
+        case "-": {
+          int a = stack.pop();
+          int b = stack.pop();
+          stack.push(b - a);
+          break;
+        }
+        case "*": {
+          int a = stack.pop();
+          int b = stack.pop();
+          stack.push(b * a);
+          break;
+        }
+        case "/": {
+          int a = stack.pop();
+          int b = stack.pop();
+          stack.push(b / a);
+          break;
+        }
+        default:
+          stack.push(Integer.parseInt(token));
+          break;
+      }
+    }
+    return stack.pop();
+  }
+}
+```
+
